--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           </h3>
           <p>
             I'm a Backend Developer, I love to create functional websites. I'm
-            currently in Second year and pursuing B.Tech from Ajay Kumar Garg
-            Engineering College with Computer Science and Engineering. I'm a 5th-💥 coder in programming solving on
-            Hacker rank and 3rd💥 on Codechef . I like to write code day or
-            night ....every time. I always support those who are honest about
-            their duty and goal.
+            currently in my Second year and pursuing B.Tech from Ajay Kumar Garg
+            Engineering College in Computer Science and Engineering. I'm a
+            5th-💥 coder in programming solving on Hacker rank and 3rd💥 on
+            Codechef. I like to write code day or night ....every time. I always
+            support those who are honest about their duty and goal.
           </p>
         </div>
       </div>
@@ -58,67 +58,36 @@
           <div class="left-about">
             <h4>Information</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-              labore nihil obcaecati consequatur. Debitis error doloremque, vero
-              eos vel nemo eius voluptatem dicta tenetur modi. <br />
-              <br />
-              .
+              I'm a Backend Developer, I love to create functional websites. I'm
+              currently in my Second year and pursuing B.Tech from Ajay Kumar
+              Garg Engineering College in Computer Science and Engineering. I
+              like to play cricket the most and also enjoy playing volleyball.
             </p>
           </div>
           <div class="right-about">
-            <!-- <div class="about-item">
+            <div class="about-item">
               <div class="abt-text">
                 <p class="large-text">10+</p>
-                <p class="small-text">
-                  Projects <br />
-                  Completed
+                <p>
+                  Projects <br />   
+                  Check it on 
+                  <a href="https://github.com/YbiG-blog" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>            
+                </p>
+              </div>
+              <div class="abt-text">
+                <p class="large-text">1+</p>
+                <!-- class="small-text" -->
+                <p >
+                  Years of <br />
+                  Experience
                 </p>
               </div>
             </div>
-            <div class="about-item">
-              <div class="abt-text">
-                <p class="large-text">1+</p>
-                <p class="small-text">
-                  Years of <br />
-                  experience
-                </p>
-              </div>
-            </div> -->
-            <!-- <div class="about-item">
-                <div class="abt-text">
-                  <p class="large-text">1+</p>
-                  <p class="small-text">
-                    Years of <br />
-                    experience
-                  </p>
-                </div>
-              </div> -->
-              <div class="about-item">
-                <div class="abt-text">
-                  <p class="large-text">1+</p>
-                  <p class="small-text">
-                    Years of <br />
-                    experience
-                  </p>
-                </div>
-                <div class="abt-text">
-                    <p class="large-text">1+</p>
-                    <p class="small-text">
-                      Years of <br />
-                      experience
-                    </p>
-                  </div>
-                  <div class="abt-text">
-                    <p class="large-text">1+</p>
-                    <p class="small-text">
-                      Years of <br />
-                      experience
-                    </p>
-                  </div>
-              </div>
           </div>
         </div>
-        
+
         <div class="about-stats">
           <h4 class="stat-title">My Skills</h4>
           <div class="progress-bars">
@@ -197,9 +166,8 @@
             <p class="tl-duration">2024 - present</p>
             <h5>B.Tech<span> - AKGEC</span></h5>
             <p>
-                I'm
-                currently in Second year and pursuing B.Tech from Ajay Kumar Garg
-                Engineering College with Computer Science and Engineering .
+              I'm currently in Second year and pursuing B.Tech from Ajay Kumar
+              Garg Engineering College with Computer Science and Engineering .
             </p>
           </div>
           <div class="timeline-item">
@@ -230,161 +198,16 @@
           </div>
         </div>
       </section>
-      <section class="container" id="portfolio">
-        <div class="main-title">
-          <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
-        </div>
-        <p class="port-text">
-          Here is some of my work that I've done in various programming
-          languages.
-        </p>
-        <div class="portfolios">
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port1.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port3.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port4.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port5.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="container contact" id="contact">
         <div class="contact-container">
           <div class="main-title">
-            <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+            <h2>Contact <span>Here</span></h2>
           </div>
           <div class="contact-content-con">
             <div class="left-contact">
-              <h4>Contact me here</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-                laborum numquam? Quam excepturi perspiciatis quas quasi.
+                Love hot wings as much as I do? Let's talk about how awesome
+                they are! We can code while we eat hot wings!
               </p>
               <div class="contact-info">
                 <div class="contact-item">
@@ -507,9 +330,9 @@
       <div class="control" data-id="about">
         <i class="fas fa-user"></i>
       </div>
-      <div class="control" data-id="portfolio">
+      <!-- <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
-      </div>
+      </div> -->
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
