--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="h-shape"></div>
           <div class="image">
             <img
-              src="img/WhatsApp Image 2022-04-17 at 8.27.24 PM.jpeg"
+              src="img/yash-img.jpeg"
               alt=""
             />
           </div>
