--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">10+</p>
+                <p class="large-text">15+</p>
                 <p>
                   Projects <br />   
                   Check it on 
@@ -167,7 +167,7 @@
             <p class="tl-duration">2024 - present</p>
             <h5>B.Tech<span> - AKGEC</span></h5>
             <p>
-              I'm currently in Second year and pursuing B.Tech from Ajay Kumar
+              I'm currently in 3rd year and pursuing B.Tech from Ajay Kumar
               Garg Engineering College with Computer Science and Engineering .
             </p>
           </div>
@@ -187,14 +187,22 @@
             <div class="tl-icon">
               <i class="fas fa-briefcase"></i>
             </div>
-            <p class="tl-duration">JUL, 2021 - Aug, 2022</p>
-            <h5>campus ambassador<span> - letsgrowmore</span></h5>
-            <p>
+            <p class="tl-duration">Dec. 2022 - Feb 2023</p>
+            <h5>Backend Development Intern<span> - Staring Core</span></h5>
+            <!-- <h5>campus ambassador<span> - letsgrowmore</span></h5> -->
+            <!-- <p>
               The experience was quite good. I was Learnt a lot from this like
               how to handle work and manage activities in our college. This is a
               monthly program, in this period I did many tasks like promotion of
               our company and events like what should the students do for their
               career.
+            </p> -->
+            <p>
+            Project - Stock Management System.
+             1.Server : REST APIs using Node.JS and ExpressJs.
+             2. Database : Worked with MongoDB as the database to store.
+             3. Authentication : Used JWT for stateless authentication mechanisms for users and providers.
+
             </p>
           </div>
         </div>
