--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           </h3>
           <p>
             I'm a Backend Developer, I love to create functional websites. I'm
-            currently in my Second year and pursuing B.Tech from Ajay Kumar Garg
+            currently in my 3rd year and pursuing B.Tech from Ajay Kumar Garg
             Engineering College in Computer Science and Engineering. I'm a
             5th-💥 coder in programming solving on Hacker rank and 3rd💥 on
-            Codechef. I like to write code day or night ....every time. I always
+            Codechef(Max rating : 1706). I like to write code day or night ....every time. I always
             support those who are honest about their duty and goal.
           </p>
         </div>
