--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
               career.
             </p> -->
             <p>
-            Project - Stock Management System.
-             1.Server : REST APIs using Node.JS and ExpressJs.
-             2. Database : Worked with MongoDB as the database to store.
+            Project - Stock Management System.<br>
+             1. Server : REST APIs using Node.JS and ExpressJs.<br>
+             2. Database : Worked with MongoDB as the database to store.<br>
              3. Authentication : Used JWT for stateless authentication mechanisms for users and providers.
 
             </p>
