--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             </div>
             <p class="tl-duration">2024 - present</p>
             <h5>B.Tech<span> - AKGEC</span></h5>
+            <h4>SGPA<span> - 8.285</span></h4>
             <p>
               I'm currently in 3rd year and pursuing B.Tech from Ajay Kumar
               Garg Engineering College with Computer Science and Engineering .
