--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             I'm a Backend Developer, I love to create functional websites. I'm
             currently in my 3rd year and pursuing B.Tech from Ajay Kumar Garg
             Engineering College in Computer Science and Engineering. I'm a
-            5th-💥 coder in programming solving on Hacker rank and 3rd💥 on
-            Codechef(Max rating : 1706). I like to write code day or night ....every time. I always
+            5th Star coder in programming solving on Hacker rank and 3rd Star on
+            CodeChef ( Max rating : 1706 ).<br> I like to write code day or night ....every time. I always
             support those who are honest about their duty and goal.
           </p>
         </div>
@@ -165,8 +165,8 @@
               <i class="fas fa-briefcase"></i>
             </div>
             <p class="tl-duration">2024 - present</p>
-            <h5>B.Tech<span> - AKGEC</span></h5>
-            <h4>SGPA<span> - 8.285</span></h4>
+            <h5>B.Tech<span> - AKGEC ( SGPA : 8.285 )</span></h5>
+<!--             <h4>SGPA<span> - 8.285</span></h4> -->
             <p>
               I'm currently in 3rd year and pursuing B.Tech from Ajay Kumar
               Garg Engineering College with Computer Science and Engineering .
