--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             I'm a Backend Developer, I love to create functional websites. I'm
             currently in my 3rd year and pursuing B.Tech from Ajay Kumar Garg
             Engineering College in Computer Science and Engineering. I'm a
-            5th Star coder in programming solving on Hacker rank and 3rd Star on
+            5th Star coder in programming solving on HackerRank and 3rd Star on
             CodeChef ( Max rating : 1706 ).<br> I like to write code day or night ....every time. I always
             support those who are honest about their duty and goal.
           </p>
