added experience and updated profile image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="left-header">
         <div class="h-shape"></div>
         <div class="image">
-          <img src="img/yash_new_img.jpg" alt="" />
+          <img src="img/yash.jpg" alt="" />
         </div>
       </div>
       <div class="right-header">
@@ -52,8 +52,8 @@
         <div class="left-about">
           <h4>Information</h4>
           <p>
-            I'm a Backend Developer, I love to create functional websites. Currently in my final year of B.Tech,
-            pursuing Computer Science and Engineering at Ajay Kumar Garg Engineering College, I have immersed myself in
+            I'm a Backend Developer, I love to create functional websites. Completed my B.Tech,
+            in Computer Science and Engineering at Ajay Kumar Garg Engineering College, I have immersed myself in
             the world of programming and problem-solving.
           </p>
         </div>
@@ -159,7 +159,7 @@
           <p class="tl-duration">2020 - present</p>
           <h5>B.Tech<span> - Ajay Kumar Garg Engineering College Ghaziabad</span></h5>
           <p>
-            <strong>CGPA</strong> 8.11
+            <strong>CGPA</strong> 8.00
           </p>
         </div>
       </div>
@@ -168,6 +168,19 @@
       <h4 class="stat-title"> Experience </h4>
 
       <div class="timeline">
+ 
+         <div class="timeline-item">
+          <div class="tl-icon">
+            <i class="fas fa-briefcase"></i>
+          </div>
+          <p class="tl-duration">Dec. 2023 - Present</p>
+          <h5>Backend Developer<span> - Listed Inc</span></h5>
+          <P><strong>1.</strong> BI optimize communication workflows with Node.js TypeScript, MySQL (Sequelize), and RabbitMQ.
+          </P><br>
+          <P><strong>2.</strong>  Implemented efficient Cron-Job scheduling and RabbitMQ with a round-robin technique, resulting in a 10x
+improvement in server or product response times and reducing memory leakage in the product search lens.</P><br>
+        </div>
+        
         <div class="timeline-item">
           <div class="tl-icon">
             <i class="fas fa-briefcase"></i>
