Education section updated

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div class="tl-icon">
             <i class="fas fa-briefcase"></i>
           </div>
-          <p class="tl-duration">2020 - present</p>
+          <p class="tl-duration">2020 - 2024</p>
           <h5>B.Tech<span> - Ajay Kumar Garg Engineering College Ghaziabad</span></h5>
           <p>
             <strong>CGPA</strong> 8.00
@@ -175,7 +175,7 @@
           </div>
           <p class="tl-duration">Dec. 2023 - Present</p>
           <h5>Backend Developer<span> - Listed Inc</span></h5>
-          <P><strong>1.</strong> BI optimize communication workflows with Node.js TypeScript, MySQL (Sequelize), and RabbitMQ.
+          <P><strong>1.</strong> I optimize communication workflows with Node.js TypeScript, MySQL (Sequelize), and RabbitMQ.
           </P><br>
           <P><strong>2.</strong>  Implemented efficient Cron-Job scheduling and RabbitMQ with a round-robin technique, resulting in a 10x
 improvement in server or product response times and reducing memory leakage in the product search lens.</P><br>
