--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="left-header">
         <div class="h-shape"></div>
         <div class="image">
-          <img src="img/yash.jpg" alt="" />
+          <img src="img/yash.jpeg" alt="" />
         </div>
       </div>
       <div class="right-header">
