--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </h3>
         <p>
           Hi, I am pleased to introduce myself as a dedicated backend developer with a passion for creating highly
-          functional websites. Currently in my final year of B.Tech, pursuing Computer Science and Engineering at Ajay
+          functional websites. Completed my B.Tech in Computer Science and Engineering at Ajay
           Kumar Garg Engineering College, I have immersed myself in the world of programming and problem-solving.
 
-          With an extensive background in solving over 1000 problems on platforms such as LeetCode and others, I have
+          With an extensive background in solving over 1000 problems on platforms such as LeetCode, CodeChef and others, I have
           honed my skills in algorithmic thinking and logical reasoning. My commitment to continuous growth and
           improvement is reflected in my achievements as a 3rd Star Coder on CodeChef, with a maximum rating of 1706.
         </p>
